# stt-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/stt_bot/: __init__.py  __main__.py  bot.py  config.py  handlers.py  health.py  metrics.py  textsplit.py  transcriber.py
src/uebot/: __init__.py  bot.py  config.py  handlers.py  logconfig.py  metrics.py
tests/: test_bot.py  test_config.py  test_handlers.py  test_health.py  test_integration_slow.py  test_metrics.py  test_textsplit.py  test_transcriber.py
tests/data/: README.md
